infra/k8s/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: ultimate-template-web
spec:
  selector:
    app: ultimate-template-web
  ports:
    - name: http
      port: 3000
      targetPort: http
