infra/k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ultimate-template-api
spec:
  podSelector:
    matchLabels:
      app: ultimate-template-api
  policyTypes: ['Ingress', 'Egress']
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ultimate-template-web
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ultimate-template-web
spec:
  podSelector:
    matchLabels:
      app: ultimate-template-web
  policyTypes: ['Ingress', 'Egress']
  ingress:
    - from:
        - namespaceSelector: {}
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: ultimate-template-api
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
